# npackd-cpp

./: .gitignore  .gitmodules  .hgignore  AppVeyorBuild.bat  AppVeyorInstall.bat  AppVeyorTest.bat  BUILD.md  BUILD.txt  CMakeLists.txt  Common.mak  Coverity.bat  LICENSE.txt  QtCreatorSourceCodeFormatting.xml  README.md  TAGMESSAGE  appveyor.yml  package-lock.json  tb.js  tb_common.js  wuapi.h  wuapi.tlb
clu/: BUILD.txt  Build32.bat  CMakeLists.txt  Jakefile.js  Makefile  app.cpp  app.h  clu.pro  meson.build  tb.js
clu/src/: app.cpp  app.h  app.rc.in  clu.pro  main.cpp
cmake/: Common.cmake  FindQuaZip.cmake  UserTemplate.user.in  app.manifest.in  app.rc.in
exe-proxy/: BUILD.txt  README.txt
exe-proxy/src/: main.c
exeproxy/: BUILD.txt  CMakeLists.txt  Makefile  README.txt
exeproxy/src/: exeproxy.pro  main.c
npackd/: tb.js
npackd/src/: abstractrepository.cpp  abstractrepository.h  abstractthirdpartypm.cpp  clprogress.cpp  clprogress.h  commandline.cpp  commandlinemessagehandler.cpp  commandlinemessagehandler.h  comobject.h  controlpanelthirdpartypm.cpp  controlpanelthirdpartypm.h  dag.h  dbrepository.cpp  dbrepository.h  downloader.cpp  hrtimer.h  installedpackages.cpp  installedpackages.h  installedpackagesthirdpartypm.cpp  installedpackageversion.h  installoperation.cpp  job.h  license.cpp  lockedfiles.cpp  lockedfiles.h  msithirdpartypm.cpp  msithirdpartypm.h  mysqlquery.h  npackd_de.ts  npackd_es.ts  npackd_fr.ts  npackd_ru.ts  package.cpp  package.h  packagemanager.cpp  packagemanager.h  packageutils.cpp  packageversion.cpp  packageversionfile.cpp  packageversionfile.h  (+16 more)
npackdcl/: BUILD.txt  Build32.bat  Build64.bat  CMakeLists.txt  Makefile  NpackdCL.aip  TestCases.txt  app.cpp  app.h  main.cpp  meson.build  npackdcl.pro  tb.js
npackdcl/ftests/: BUILD.txt  CMakeLists.txt  Makefile  meson.build
npackdcl/ftests/src/: app.cpp  app.h  ftests.pro  main.cpp
npackdcl/src/: NpackdCL.aip  NpackdCL32.aip  NpackdCL64.aip  app.cpp  app.h  app.rc.in  commandlinemessagehandler.cpp  commandlinemessagehandler.h  main.cpp  npackdcl.manifest  npackdcl.pro  npackdcl.rc  stable.h
npackdcl/tests/: CMakeLists.txt  Makefile  meson.build
npackdcl/tests/src/: app.cpp  app.h  tests.pro
npackdcl_ftests/: Rep.xml  tb.js
npackdcl_ftests/src/: app.cpp  app.h  main.cpp
npackdcl_tests/: CMakeLists.txt  tb.js
npackdcl_tests/src/: app.cpp  app.h
npackdg/: BUILD.txt  CMakeLists.txt  Jakefile.js  Makefile  TestCases.txt  build32.bat  build64.bat  meson.build  npackdg.cppcheck  tb.js  waf.bat  wscript  xmake.lua
npackdg/src/: abstractrepository.cpp  abstractrepository.h  abstractthirdpartypm.cpp  abstractthirdpartypm.h  app.rc  app.rc.in  appsthirdpartypm.cpp  appsthirdpartypm.h  asyncdownloader.cpp  asyncdownloader.h  cbsthirdpartypm.cpp  cbsthirdpartypm.h  clprocessor.cpp  clprocessor.h  clprogress.cpp  clprogress.h  commandline.cpp  commandline.h  comobject.cpp  comobject.h  controlpanelthirdpartypm.cpp  controlpanelthirdpartypm.h  controlservicesoperation.cpp  controlservicesoperation.h  dag.cpp  dag.h  dbrepository.cpp  dbrepository.h  dependency.cpp  dependency.h  deptask.cpp  deptask.h  detectfile.cpp  detectfile.h  dismapi.h  dismthirdpartypm.cpp  dismthirdpartypm.h  downloader.cpp  downloader.h  downloadoperation.cpp  (+117 more)
quazip/: tb.js
quazip-dev-i686-w64-static/: Build.bat
quazip-dev-x86_64-w64-static/: Build.bat
vimorgrep/: Makefile
vimorgrep/src/: main.cpp  vimorgrep.pro  vimorgrepapp.cpp  vimorgrepapp.h
wpmcpp/: BUILD.txt  Build32.bat  Build64.bat  CMakeLists.txt  Clean32.bat  Clean32GProf.bat  Clean64.bat  Clean64GProf.bat  Compile32.bat  Compile64.bat  GProf.bat  GProf32.bat  GProf64.bat  HowToRelease.txt  Jakefile.js  Makefile  Release.bat  RunDrMemory.bat  TestCases.txt  abstractrepository.cpp  abstractrepository.h  abstractthirdpartypm.h  commandline.cpp  commandline.h  controlpanelthirdpartypm.cpp  controlpanelthirdpartypm.h  dbrepository.cpp  dbrepository.h  dependency.h  downloader.cpp  downloader.h  installedpackages.cpp  installedpackages.h  installedpackagesthirdpartypm.cpp  installedpackageversion.cpp  installedpackageversion.h  job.cpp  job.h  main.cpp  mainframe.cpp  (+46 more)
wpmcpp/src/: abstractrepository.cpp  abstractrepository.h  abstractrepository.h.autosave  abstractthirdpartypm.cpp  abstractthirdpartypm.h  cbsthirdpartypm.cpp  cbsthirdpartypm.h  clprocessor.cpp  clprocessor.h  clprogress.cpp  clprogress.h  commandline.cpp  commandline.h  concurrent.h  controlpanelthirdpartypm.cpp  dbrepository.cpp  dbrepository.h  dependency.cpp  dependency.h  downloader.cpp  downloader.h  downloadsizefinder.cpp  downloadsizefinder.h  exportrepositoryframe.cpp  exportrepositoryframe.h  exportrepositoryframe.ui  fileloader.cpp  fileloader.h  fileloaderitem.cpp  fileloaderitem.h  flowlayout.cpp  flowlayout.h  hrtimer.cpp  hrtimer.h  installedpackages.cpp  installedpackages.h  installedpackagesthirdpartypm.cpp  installedpackagesthirdpartypm.h  installedpackageversion.cpp  installedpackageversion.h  (+75 more)
